# ring

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  role.json
.github/workflows/: build_push.yml  ring-AutoDeployTrigger-97c7dede-7198-4fe7-86a7-5d26e06b1d50.yml
.streamlit/: config.toml
src/ring/: conf.py  fields.py  header.py  main.py  populate.py
src/ring/auth/: __init__.py  util.py
src/ring/components/: add_sighting.py  date_picker.py  edit_sighting.py  place_selector.py
src/ring/data/: generator.py  loader.py  saver.py
src/ring/db/: __init__.py  abstract.py  bird.py  client.py  places.py  rings.py  sighting.py  species.py  user.py  users.py
src/ring/dep_sites/analysis/: main.py
src/ring/dep_sites/auth/: users.py
src/ring/dep_sites/chat/: chat.py
src/ring/dep_sites/data/: cache.py  sightings.py  single_bird.py
src/ring/dep_sites/new/: add_edit_bird.py  add_sighting.py  add_sighting_simple.py  edit_place.py  edit_sighting.py  find_bird.py  places.py  save_bird.py
src/ring/models/: bird.py  user.py
src/ring/sites/: add_sightings.py  view_database.py
src/ring/sites/analysis/: main.py
src/ring/sites/auth/: user.py
src/ring/sites/data/: cache.py  sightings.py  single_bird.py
src/ring/sites/new/: add_edit_bird.py  add_sighting.py  add_sighting_simple.py  edit_place.py  edit_sighting.py  find_bird.py  places.py  save_bird.py
src/ring/util/: __init__.py  date.py  df.py  fields.py
